test/error/syn/closedParentheses.tig
let
	var n := 0
in
	n := (n * n) + 1)
end
